--- a/style.css
+++ b/style.css
@@ -178,7 +178,8 @@ main {
 #image-card {
   width: 100%;
   height: 12rem;
-  border-top: 1.2rem;
+  border-top-left-radius: 1.2rem;
+  border-top-right-radius: 1.2rem;
 }
 
 .card-text {
